Archive2/f5/6f2b558fcaebd4/output
main.cpp: In function 'void nil(T)':
main.cpp:2:14: error: 'zzz' was not declared in this scope
 void nil(T) {zzz}
              ^
