Archive2/f5/6f2b558fcaebd4/main.cpp
template<typename T>
void nil(T) {zzz}

template<typename T>
void foo(T*) {}

int main()
{
    int* blah;
    foo(blah);
}